--- a/css/style.css
+++ b/css/style.css
@@ -157,7 +157,7 @@ table tr td{text-align:center}
 		float:none;
 		width:100%;
 		text-align:center;
-		background-color:blue;
+		background-color:background:rgba(0,0,0,0.5);
 	}
 	ul.first > li a{
 		/*color:#005c48;*/
@@ -223,7 +223,7 @@ table tr td{text-align:center}
 		float:none;
 		width:100%;
 		text-align:center;
-		background-color:blue;
+		background-color:background:rgba(0,0,0,0.5);
 	}
 	ul.first > li a{
 		/*color:#005c48;*/
@@ -288,7 +288,7 @@ table tr td{text-align:center}
 		float:none;
 		width:100%;
 		text-align:center;
-		background-color:blue;
+		background-color:background:rgba(0,0,0,0.5);
 	}
 	ul.first > li a{
 		/*color:#005c48;*/
@@ -351,7 +351,7 @@ table tr td{text-align:center}
 		float:none;
 		width:100%;
 		text-align:center;
-		background-color:blue;
+		background-color:background:rgba(0,0,0,0.5);
 	}
 	ul.first > li a{
 		/*color:#005c48;*/
@@ -416,7 +416,7 @@ table tr td{text-align:center}
 		float:none;
 		width:100%;
 		text-align:center;
-		background-color:blue;
+		background-color:background:rgba(0,0,0,0.5);
 	}
 	ul.first > li a{
 		/*color:#005c48;*/
@@ -480,7 +480,7 @@ table tr td{text-align:center}
 		float:none;
 		width:100%;
 		text-align:center;
-		background-color:blue;
+		background-color:background:rgba(0,0,0,0.5);
 	}
 	ul.first > li a{
 		/*color:#005c48;*/
@@ -543,7 +543,7 @@ table tr td{text-align:center}
 		float:none;
 		width:100%;
 		text-align:center;
-		background-color:blue;
+		background-color:background:rgba(0,0,0,0.5);
 	}
 	ul.first > li a{
 		/*color:#005c48;*/
@@ -608,7 +608,7 @@ table tr td{text-align:center}
 		float:none;
 		width:100%;
 		text-align:center;
-		background-color:blue;
+		background-color:background:rgba(0,0,0,0.5);
 	}
 	ul.first > li a{
 		/*color:#005c48;*/
@@ -672,7 +672,7 @@ table tr td{text-align:center}
 		float:none;
 		width:100%;
 		text-align:center;
-		background-color:blue;
+		background-color:background:rgba(0,0,0,0.5);
 	}
 	ul.first > li a{
 		/*color:#005c48;*/
@@ -735,7 +735,7 @@ table tr td{text-align:center}
 		float:none;
 		width:100%;
 		text-align:center;
-		background-color:blue;
+		background-color:background:rgba(0,0,0,0.5);
 	}
 	ul.first > li a{
 		/*color:#005c48;*/
@@ -800,7 +800,7 @@ table tr td{text-align:center}
 		float:none;
 		width:100%;
 		text-align:center;
-		background-color:blue;
+		background-color:background:rgba(0,0,0,0.5);
 	}
 	ul.first > li a{
 		/*color:#005c48;*/
@@ -865,7 +865,7 @@ table tr td{text-align:center}
 		float:none;
 		width:100%;
 		text-align:center;
-		background-color:blue;
+		background-color:background:rgba(0,0,0,0.5);
 	}
 	ul.first > li a{
 		/*color:#005c48;*/
@@ -929,7 +929,7 @@ table tr td{text-align:center}
 		float:none;
 		width:100%;
 		text-align:center;
-		background-color:blue;
+		background-color:background:rgba(0,0,0,0.5);
 	}
 	ul.first > li a{
 		/*color:#005c48;*/
@@ -994,7 +994,7 @@ table tr td{text-align:center}
 		float:none;
 		width:100%;
 		text-align:center;
-		background-color:blue;
+		background-color:background:rgba(0,0,0,0.5);
 	}
 	ul.first > li a{
 		/*color:#005c48;*/
@@ -1058,7 +1058,7 @@ table tr td{text-align:center}
 		float:none;
 		width:100%;
 		text-align:center;
-		background-color:blue;
+		background-color:background:rgba(0,0,0,0.5);
 	}
 	ul.first > li a{
 		/*color:#005c48;*/
@@ -1121,7 +1121,7 @@ table tr td{text-align:center}
 		float:none;
 		width:100%;
 		text-align:center;
-		background-color:blue;
+		background-color:background:rgba(0,0,0,0.5);
 	}
 	ul.first > li a{
 		/*color:#005c48;*/
